// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConfig should return config with defaults 1`] = `
Object {
  "concurrent": true,
  "gitDir": ".",
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "linters": Object {},
  "renderer": "update",
  "verbose": false,
}
`;

exports[`getConfig should set linters 1`] = `
Object {
  "concurrent": true,
  "gitDir": "..",
  "globOptions": Object {
    "dot": true,
    "matchBase": true,
  },
  "linters": Object {
    "*.js": Array [
      "eslint --fix",
      "git add",
    ],
    ".*rc": "jsonlint",
  },
  "renderer": "update",
  "verbose": true,
}
`;
